Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12708

innodb.truncate_purge_debug fails sporadically in buildbot

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.6
    • 10.2.6
    • Tests
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/7959/steps/test_2/logs/stdio

      innodb.truncate_purge_debug 'innodb'     w1 [ fail ]
              Test ended at 2017-05-03 11:08:13
       
      CURRENT_TEST: innodb.truncate_purge_debug
      --- /mnt/buildbot/build/mariadb-10.2.6/mysql-test/suite/innodb/r/truncate_purge_debug.result	2017-05-03 09:30:39.000000000 +0300
      +++ /mnt/buildbot/build/mariadb-10.2.6/mysql-test/suite/innodb/r/truncate_purge_debug.reject	2017-05-03 11:08:12.000000000 +0300
      @@ -24,6 +24,8 @@
       SET DEBUG_SYNC = 'now SIGNAL finish_scan';
       SET DEBUG_SYNC = 'RESET';
       connection con1;
      +Warnings:
      +Warning	1639	debug sync point wait timed out
       disconnect con1;
       connection default;
       drop table t1;
       
      mysqltest: Result length mismatch
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.