MDEV-12708 innodb.truncate_purge_debug fails sporadically in buildbot

The latest attempted fix for
MDEV-11802 InnoDB purge fails to start when there is work to do
is not complete.

For now, work around the issue by making SHOW ENGINE INNODB STATUS
call srv_wake_purge_thread_if_not_active() to wake up the purge.